--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <!--Footer-->
         <footer class="footer-index">
-          <a href="./faq.html">FAQS</a>
+          <a href="./faq.html">FAQ</a>
         </footer>
 
         <script src="js/main.js"></script>
