--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">  
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
- 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>DC VS MARVEL</title>
   </head>
 
@@ -25,11 +25,14 @@
         </div>
       </nav>
         <!-- Carrosell-->
-          <div>
-            <div class="">
-              <img src="./img/DC&MARVEL.jpg" class="foto-carrusell">
+            <div class="slider">
+              <ul>
+                <li><img src="./img/marvellucha.jpg" alt="Marvel team"</li>
+                <li><img src="./img/Justice2.jpg" alt="DC team"></li>
+                <li><img src="./img/marvelposition.jpeg" alt="Marvel team"></li>
+                <li><img src="./img/laligadelajusticiaportada.jpg" alt="Dc team"></li>
+              </ul>
             </div>
-          </div>
         <!-- Busqueda de cartas-->
         <main>
           
@@ -78,7 +81,7 @@
 
         <!--Footer-->
         <footer class="footer-index">
-          <a href="./faq.html">FAQ</a>
+          <a href="./faq.html">FAQS</a>
         </footer>
 
         <script src="js/main.js"></script>
