--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <title>DC VS MARVEL</title>
   </head>
@@ -20,7 +21,7 @@
       <!--Segunda navbar-->
       <nav class="navbar2">
         <div class="navbar2-container">
-          <a class="navbar2-a" href="./index.html">Home</a>
+          <a class="navbar2-a" href="./index.html"></i>Home</a>
           <a class="navbar2-a" href="./login.html">Log in</a>
           <a class="navbar2-a" href="./signup.html">Sign up</a>  
         </div>
