--- a/faq.html
+++ b/faq.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/faq.css">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    
     <title>DC VS MARVEL</title>
   </head>
 
@@ -25,11 +27,34 @@
           <a class="navbar2-a" href="./signup.html">Sign up</a>  
         </div>
       </nav>
+    <!-- ACORDEON-->
+  <div class="accordion">
+    <h1>FAQS</h1>
+    <ul>
+      <li>
+        <input type="checkbox" checked>
+        <i></i>
+        <h2>Pregunta 1</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit architecto unde, voluptates cum harum fuga veniam suscipit modi esse eum ullam quisquam ipsam. Neque nisi, aut ipsam molestias architecto perspiciatis.</p>
+      </li>
 
-    
+      <li>
+        <input type="checkbox" checked>
+        <i></i>
+        <h2>Pregunta 2</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit architecto unde, voluptates cum harum fuga veniam suscipit modi esse eum ullam quisquam ipsam. Neque nisi, aut ipsam molestias architecto perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, beatae amet vel accusantium aliquid quisquam maxime tenetur eaque reiciendis saepe officia hic, neque error est repellendus repudiandae iure nulla harum.</p>
+      </li>
 
-    <!-- Busqueda de cartas-->
-    <section></section>
+      <li>
+        <input type="checkbox" checked>
+        <i></i>
+        <h2>Pregunta 3</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit architecto unde, voluptates cum harum fuga veniam suscipit modi esse eum ullam quisquam ipsam. Neque nisi, aut ipsam molestias architecto perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat enim repellat totam unde officiis saepe iusto fugit debitis ullam. Debitis perferendis nam, nostrum unde consectetur sit maiores hic molestias omnis.</p>
+      </li>
+    </ul>
+  </div>
+
+
 
     <!--Footer-->
     <footer class="footer-faq">
