--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
       <!--Segunda navbar-->
       <nav class="navbar2">
         <div class="navbar2-container">
-          <a class="navbar2-a" href="./index.html"></i>Home</a>
+          <a class="navbar2-a" href="./index.html">Home</a>
           <a class="navbar2-a" href="./login.html">Log in</a>
           <a class="navbar2-a" href="./signup.html">Sign up</a>  
         </div>
