--- a/signup.html
+++ b/signup.html
@@ -8,6 +8,8 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+
     <title>DC VS MARVEL</title>
   </head>
 
@@ -30,16 +32,16 @@
     <div class="contenedor">
         <form class="form">
             <div class="form-header">
-                <h1 class="form-title">Sign Up</h1>
+                <h1 class="form-title"><i class="fas fa-mask"></i></h1>
             </div>
 
-            <input type="name" class="form-input" id="name" placeholder="Name">
-            <input type="email"  class="form-input" id="email" placeholder="Email adress">
-            <input type="password" class="form-input" id="password" placeholder="Password">
-            <input type="password" class="form-input" id="repeat-password" placeholder="Repeat Password">
+            <input type="name" style="font-family:Nunito, FontAwesome" class="form-input" id="name" placeholder="&#xf007;     Name">
+            <input type="email"  style="font-family:Nunito, FontAwesome" class="form-input" id="email" placeholder="&#xf0e0;    Email adress">
+            <input type="password" style="font-family:Nunito, FontAwesome" class="form-input" id="password" placeholder="&#xf023;     Password">
+            <input type="password" style="font-family:Nunito, FontAwesome" class="form-input" id="repeat-password" placeholder="&#xf023;     Repeat Password">
 
             <div class="btn-submit">
-                <button type="submit" class="button-submit" id="signup-button" disabled>Submit</button>
+                <button type="submit" class="button-submit" id="signup-button" disabled>Sign Up</button>
             </div>
         </form>
         <div class="message-container"></div>
