--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <a href="#"><img src="./img/DCMARVEL.jpeg" width="200" height="50" alt="Marvel DC"></a>
+      <a href="#accordion"><img src="./img/DCMARVEL.jpeg" width="200" height="50" alt="Marvel DC"></a>
     </nav>
     <hr class="separador-nav" />
       <!--Segunda navbar-->
@@ -35,8 +35,9 @@
               </ul>
             </div>
 
+
           <!-- ACORDEON -->
-            <div class="accordion">
+            <div id="accordion" class="accordion">
              <!-- meter-->
               <ul class="accordion-ul">
                 <li>
@@ -74,8 +75,9 @@
                     <p id="ant-btn"><a href="#heroes" class="a-card">Ant Man</a></p>
                 </li>
               </ul>
+              <div id="heroes"></div>
             </div>
-            <div id="heroes"></div>
+            
 
         <!--Footer-->
         <footer class="footer-index">
