--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>DC VS MARVEL</title>
   </head>
 
@@ -32,6 +32,9 @@
                 <li class="slider-li"><img src="./img/Justice2.jpg" alt="DC team"></li>
                 <li class="slider-li"><img src="./img/marvelposition.jpeg" alt="Marvel team"></li>
                 <li class="slider-li"><img src="./img/laligadelajusticiaportada.jpg" alt="Dc team"></li>
+                <li class="slider-li"><img src="./img/avengers.jpg" alt="Marvel team"></li>
+                <li class="slider-li"><img src="./img/LJ.jpg" alt="DC team"></li>
+                <li class="slider-li"><img src="./img/marvelvsdccara.jpg" alt="Dc vs Marvel"></li>
               </ul>
             </div>
 
@@ -44,45 +47,86 @@
                   <input type="checkbox" checked>
                   <i></i>
                   <h2 class="h2-dc">DC</h2>
-                    <p id="superman-btn"><a href="#heroes" class="a-card">Superman</a></p>
-                    <p id="batman-btn"><a href="#heroes" class="a-card">Batman</a></p>
-                    <p id="wonder-btn"><a href="#heroes" class="a-card">Wonder Woman</a></p>
                     <p id="flash-btn"><a href="#heroes" class="a-card">Flash</a></p>
-                    <p id="aquaman-btn"><a href="#heroes" class="a-card">Aquaman</a></p>
-                    <p id="green-btn"><a href="#heroes" class="a-card">Green Arrow</a></p>
-                    <p id="cat-btn"><a href="#heroes" class="a-card">Catwoman</a></p>
-                    <p id="black-Light-btn"><a href="#heroes" class="a-card">Black Lightning</a></p>
-                    <p id="deathstroke-btn"><a href="#heroes" class="a-card">Deathstroke</a></p>
-                    <p id="supergirl-btn"><a href="#heroes" class="a-card">Supergirl</a></p>
                     <p id="cyborg-btn"><a href="#heroes" class="a-card">Cyborg</a></p>
+                    <p id="batman-btn"><a href="#heroes" class="a-card">Batman</a></p>
+                    <p id="supergirl-btn"><a href="#heroes" class="a-card">Supergirl</a></p>
+                    <p id="aquaman-btn"><a href="#heroes" class="a-card">Aquaman</a></p>
+                    <p id="superman-btn"><a href="#heroes" class="a-card">Superman</a></p>
+                    <p id="cat-btn"><a href="#heroes" class="a-card">Catwoman</a></p>
+                    <p id="deathstroke-btn"><a href="#heroes" class="a-card">Deathstroke</a></p>
+                    <p id="green-btn"><a href="#heroes" class="a-card">Green Arrow</a></p>
+                    <p id="black-Light-btn"><a href="#heroes" class="a-card">Black Lightning</a></p>
+                    <p id="wonder-btn"><a href="#heroes" class="a-card">Wonder Woman</a></p>
                 </li>
                 <li>
                   <input type="checkbox" checked>
                   <i></i>
                   <h2 class="h2-marvel">Marvel</h2>
-                    <p id="spiderman-btn"><a href="#heroes" class="a-card">Spiderman</a></p>
-                    <p id="ironman-btn"><a href="#heroes" class="a-card">Ironman</a></p>
+                  <p id="thor-btn"><a href="#heroes" class="a-card">Thor</a></p>
+                  <p id="hulk-btn"><a href="#heroes" class="a-card">Hulk</a></p>
+                  <p id="vison-btn"><a href="#heroes" class="a-card">Vision</a></p>
+                  <p id="falcon-btn"><a href="#heroes" class="a-card">Falcon</a></p>
+                  <p id="ant-btn"><a href="#heroes" class="a-card">AntMan</a></p>
+                  <p id="ironman-btn"><a href="#heroes" class="a-card">Ironman</a></p>
+                  <p id="hawkeye-btn"><a href="#heroes" class="a-card">Hawkeye</a></p>
+                  <p id="spiderman-btn"><a href="#heroes" class="a-card">Spiderman</a></p>
+                  <p id="warMachine-btn"><a href="#heroes" class="a-card">War Machine</a></p>
+                  <p id="blackWidow-btn"><a href="#heroes" class="a-card">Black Widow</a></p>
+                  <p id="scarlet-btn"><a href="#heroes" class="a-card">Scarlet Witch</a></p>
+                  <p id="panther-btn"><a href="#heroes" class="a-card">Black Panther</a></p>
                     <p id="capitan-btn"><a href="#heroes" class="a-card">Captain America</a></p>
-                    <p id="thor-btn"><a href="#heroes" class="a-card">Thor</a></p>
-                    <p id="hulk-btn"><a href="#heroes" class="a-card">Hulk</a></p>
-                    <p id="warMachine-btn"><a href="#heroes" class="a-card">War Machine</a></p>
-                    <p id="blackWidow-btn"><a href="#heroes" class="a-card">Black Widow</a></p>
-                    <p id="vison-btn"><a href="#heroes" class="a-card">Vision</a></p>
-                    <p id="falcon-btn"><a href="#heroes" class="a-card">Falcon</a></p>
-                    <p id="hawkeye-btn"><a href="#heroes" class="a-card">Hawkeye</a></p>
-                    <p id="scarlet-btn"><a href="#heroes" class="a-card">Scarlet Witch</a></p>
-                    <p id="panther-btn"><a href="#heroes" class="a-card">Black Panther</a></p>
-                    <p id="ant-btn"><a href="#heroes" class="a-card">Ant Man</a></p>
                 </li>
               </ul>
-              <div id="heroes"></div>
+              <div id="heroes" class="heroes-card">
+              </div>
             </div>
             
 
         <!--Footer-->
-        <footer class="footer-index">
-          <a href="./faq.html">FAQS</a>
-        </footer>
+
+      <footer class="footer-home">
+
+        <div class="footer-container">
+
+          <div class="footer-lg">
+            <a href="#accordion"><img src="./img/DClogo.svg" width="50" height="60" alt="DC Logo"></a>
+          </div>
+
+          <div class="container-sm">
+            <p>Follow DC</p>
+            <div class="sm-logos">
+              <p class="p-lg"><i class="fab fa-twitter-square"></i></p>
+              <p class="p-lg"><i class="fab fa-facebook"></i></p>
+              <p class="p-lg"><i class="fab fa-instagram"></i></p>
+              <p class="p-lg"><i class="fab fa-pinterest"></i></p>
+              <p class="p-lg"><i class="fab fa-snapchat"></i></p>
+              <p class="p-lg"><i class="fab fa-youtube"></i></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer-container">
+
+          <div class="container-sm">
+            <p>Follow Marvel</p>
+            <div class="sm-logos">
+              <p class="p-lg"><i class="fab fa-twitter-square"></i></p>
+              <p class="p-lg"><i class="fab fa-facebook"></i></p>
+              <p class="p-lg"><i class="fab fa-instagram"></i></p>
+              <p class="p-lg"><i class="fab fa-pinterest"></i></p>
+              <p class="p-lg"><i class="fab fa-snapchat"></i></p>
+              <p class="p-lg"><i class="fab fa-youtube"></i></p>
+            </div>
+          </div>
+
+          <div class="footer-lg">
+            <a href="#accordion"><img src="./img/Mlogo.png" width="50" height="50" alt="Marvel DC"></a>
+          </div>
+
+        </div>
+
+      </footer>
 
         <script src="js/main.js"></script>
         <script src="js/buttons.js"></script>
