--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <a class="navbar2-a" href="./index.html">Home</a>
           <a class="navbar2-a" href="./login.html">Log in</a>
           <a class="navbar2-a" href="./signup.html">Sign up</a>  
+          <a class="navbar2-a" href="./app.html">Cards Game</a>  
         </div>
       </nav>
         <!-- Carrosell-->
