cards call done

--- a/app.html
+++ b/app.html
@@ -26,30 +26,27 @@
           <a class="navbar2-a" href="./app.html">Cards Game</a>  
         </div>
       </nav>
-
-    <main>    
+ 
       <div class="container">
           <div class="card">
             <div class="imgBx">
-                <img src="./img/BatMan1.jpg" width="100%" height="300%">
+                <img id="batman-btn" src="./img/BatMan1.jpg" width="100%" height="300%">
             </div>
             <div class="content">
-                <h2>Batman</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti voluptate eaque, recusandae soluta officiis obcaecati libero? Eaque perferendis dicta provident veniam debitis, perspiciatis mollitia omnis fuga facilis numquam consectetur repellendus.</p>
+                <p id="heroes-pw-batman"></p>
             </div>
           </div>
           <div class="card">
             <div class="imgBx">
-                <img src="./img/thor.jpeg"  width="100%" height="300%">
+                <img id="thor-btn" src="./img/thor.jpeg"  width="500px" height="300%">
             </div>
             <div class="content">
-                <h2>Thor</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti voluptate eaque, recusandae soluta officiis obcaecati libero? Eaque perferendis dicta provident veniam debitis, perspiciatis mollitia omnis fuga facilis numquam consectetur repellendus.</p>
+                <p id="heroes-pw-thor"></p>
             </div>
           </div>
           <div class="card">
             <div class="imgBx">
-                <img src="./img/spiderman.jpg"width="100%" height="300%">
+                <img src="./img/spiderman.jpg" width="100%" height="300%">
             </div>
             <div class="content">
                 <h2>Spiderman</h2>
@@ -65,12 +62,48 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti voluptate eaque, recusandae soluta officiis obcaecati libero? Eaque perferendis dicta provident veniam debitis, perspiciatis mollitia omnis fuga facilis numquam consectetur repellendus.</p>
             </div>
           </div>
+          <div class="card">
+            <div class="imgBx">
+                <img src="./img/aquaman.jpg"width="100%" height="300%">
+            </div>
+            <div class="content">
+                <h2>Aquaman</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti voluptate eaque, recusandae soluta officiis obcaecati libero? Eaque perferendis dicta provident veniam debitis, perspiciatis mollitia omnis fuga facilis numquam consectetur repellendus.</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="imgBx">
+                <img src="./img/Antman.jpg"width="100%" height="300%">
+            </div>
+            <div class="content">
+                <h2>Antman</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti voluptate eaque, recusandae soluta officiis obcaecati libero? Eaque perferendis dicta provident veniam debitis, perspiciatis mollitia omnis fuga facilis numquam consectetur repellendus.</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="imgBx">
+                <img src="./img/wonderWoman.jpg"width="100%" height="300%">
+            </div>
+            <div class="content">
+                <h2>Wonder Woman</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti voluptate eaque, recusandae soluta officiis obcaecati libero? Eaque perferendis dicta provident veniam debitis, perspiciatis mollitia omnis fuga facilis numquam consectetur repellendus.</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="imgBx">
+                <img src="./img/Falcon.png"width="100%" height="300%">
+            </div>
+            <div class="content">
+                <h2>Falcon</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti voluptate eaque, recusandae soluta officiis obcaecati libero? Eaque perferendis dicta provident veniam debitis, perspiciatis mollitia omnis fuga facilis numquam consectetur repellendus.</p>
+            </div>
+          </div>
+          <div id="heroes-pw" class="heroes-pw"></div>
       </div>
 
-    </main>
 
 
       <script src="js/main.js"></script>
-      <script src="js/buttons.js"></script>
+      <script src="js/cards.js"></script>
 </body>
 </html>
