--- a/index.html
+++ b/index.html
@@ -76,11 +76,10 @@
                   <p id="blackWidow-btn"><a href="#heroes" class="a-card">Black Widow</a></p>
                   <p id="scarlet-btn"><a href="#heroes" class="a-card">Scarlet Witch</a></p>
                   <p id="panther-btn"><a href="#heroes" class="a-card">Black Panther</a></p>
-                    <p id="capitan-btn"><a href="#heroes" class="a-card">Captain America</a></p>
+                  <p id="capitan-btn"><a href="#heroes" class="a-card">Captain America</a></p>
                 </li>
               </ul>
-              <div id="heroes" class="heroes-card">
-              </div>
+              <div id="heroes" class="heroes-card"></div>
             </div>
             
 
