--- a/signup.html
+++ b/signup.html
@@ -24,7 +24,8 @@
         <div class="navbar2-container">
           <a class="navbar2-a" href="./index.html">Home</a>
           <a class="navbar2-a" href="./login.html">Log in</a>
-          <a class="navbar2-a" href="./signup.html">Sign up</a>  
+          <a class="navbar2-a" href="./signup.html">Sign up</a>
+          <a class="navbar2-a" href="./app.html">Cards</a>  
         </div>
       </nav>
 
