--- a/login.html
+++ b/login.html
@@ -25,6 +25,7 @@
           <a class="navbar2-a" href="./index.html">Home</a>
           <a class="navbar2-a" href="./login.html">Log in</a>
           <a class="navbar2-a" href="./signup.html">Sign up</a>  
+          <a class="navbar2-a" href="./app.html">Cards</a>  
         </div>
       </nav>
 
