--- a/app.html
+++ b/app.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  
     <title>DC VS MARVEL</title>
   </head>
 
@@ -18,14 +19,20 @@
     </nav>
     <hr class="separador-nav" />
       <!-- Segunda navbar -->
-      <nav class="navbar2">
-        <div class="navbar2-container">
-          <a class="navbar2-a" href="./index.html">Home</a>
-          <a class="navbar2-a" href="./login.html">Log in</a>
-          <a class="navbar2-a" href="./signup.html">Sign up</a>
-          <a class="navbar2-a" href="./app.html">Cards</a>  
-        </div>
-      </nav>
+      <header>
+        <input type="checkbox" id="btn-menu" />
+        <label for="btn-menu" class="icon-menu" ><i class="fas fa-bars"></i></label>
+        <nav class="menu">
+          <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./app.html">Cards</a></li>
+            <li><a href="./login.html">Log in</a></li>
+            <li><a href="./signup.html">Sign up</a></li>
+            <li><a href="./faq.html">FAQS</a></li>
+          </ul>
+        </nav>
+      </header>
+  
       <!-- CARDS -->
       <div class="container">
 
