--- a/faq.html
+++ b/faq.html
@@ -20,14 +20,20 @@
     </nav>
     <hr class="separador-nav" />
       <!--Segunda navbar-->
-      <nav class="navbar2">
-        <div class="navbar2-container">
-          <a class="navbar2-a" href="./index.html">Home</a>
-          <a class="navbar2-a" href="./login.html">Log in</a>
-          <a class="navbar2-a" href="./signup.html">Sign up</a> 
-          <a class="navbar2-a" href="./app.html">Cards</a>  
-        </div>
-      </nav>
+      <header>
+        <input type="checkbox" id="btn-menu" />
+        <label for="btn-menu" class="icon-menu" ><i class="fas fa-bars"></i></label>
+        <nav class="menu">
+          <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./app.html">Cards</a></li>
+            <li><a href="./login.html">Log in</a></li>
+            <li><a href="./signup.html">Sign up</a></li>
+            <li><a href="./faq.html">FAQS </a></li>
+          </ul>
+        </nav>
+      </header>
+  
     <!-- ACORDEON-->
   <div class="accordion">
     <h1>FAQS</h1>
