--- a/app.html
+++ b/app.html
@@ -81,7 +81,7 @@
 
         <div class="card">
           <div class="imgBx">
-              <img id="cat-btn" src="./img/catwoman.jpeg"width="100%" height="300%">
+              <img id="cat-btn" src="./img/catwoman.jpg"width="100%" height="300%">
           </div>
           <div class="content"><p id="heroes-pw-cat"></p></div>
         </div>
@@ -132,7 +132,7 @@
 
           <div class="card">
             <div class="imgBx">
-                <img id="ironman-btn" src="./img/iroman.jpeg"width="100%" height="300%">
+                <img id="ironman-btn" src="./img/ironman.jpg" width="100%" height="300%">
             </div>
             <div class="content"><p id="heroes-pw-ironman"></p></div>
           </div>
@@ -174,7 +174,7 @@
 
             <div class="card">
                 <div class="imgBx">
-                    <img id="blackWidow-btn" src="./img/blackWidow.jpeg"width="100%" height="300%">
+                    <img id="blackWidow-btn" src="./img/blackwidow.jpg"width="100%" height="300%">
                 </div>
                 <div class="content"><p id="heroes-pw-blackWidow"></p></div>
               </div>
@@ -188,7 +188,7 @@
 
               <div class="card">
                 <div class="imgBx">
-                    <img id="hawkeye-btn" src="./img/hawkeye.jpeg"width="100%" height="300%">
+                    <img id="hawkeye-btn" src="./img/hawkeye.jpg"width="100%" height="300%">
                 </div>
                 <div class="content"><p id="heroes-pw-hawkeye"></p></div>
               </div>
