--- a/app.html
+++ b/app.html
@@ -208,7 +208,66 @@
             </div>
       </div>
 
+      <footer>
+        <div class="main-content">
+          <div class="left box">
+            <h2>About us</h2>
+            <div class="content">
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae aperiam tenetur voluptates, explicabo animi unde, voluptatem deserunt ab delectus, doloremque assumenda? Illo amet doloremque repudiandae officiis in natus aperiam maxime. </p>
+              <div class="social">
+                <a href=""><span class="fab fa-facebook-f"></span></a>
+                <a href=""><span class="fab fa-twitter"></span></a>
+                <a href=""><span class="fab fa-instagram"></span></a>
+                <a href=""><span class="fab fa-youtube"></span></a>
+              </div>
+            </div>
+          </div>
 
+          <div class="center box">
+            <h2>Address</h2>
+            <div class="content">
+              <div class="place">
+                <span class="fas fa-map-marker-alt"></span>
+                <span class="text">Asgard</span>
+              </div>
+              <div class="phone">
+                <span class="fas fa-phone"></span>
+                <span class="text">+6528-3738-53689</span>
+              </div>
+              <div class="email">
+                <span class="fas fa-envelope"></span>
+                <span class="text">odin@asgard.com</span>
+              </div>
+            </div>
+          </div>  
+
+          <div class="right box">
+            <h2>Address</h2>
+            <div class="div content">
+              <form action="#">
+                <div class="email">
+                  <div class="text">Email *</div>
+                  <input type="email" required>
+                </div>
+                <div class="msg">
+                  <div class="text">Message *</div>
+                  <textarea rows="2" cols="25" required></textarea>
+                </div>
+                <div class="btn">
+                  <button type="submit">Send</button>
+                </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="bottom">
+          <center>
+            <span class="credit">Create By <a href="#">Jonathan Jimenez</a> | </span>
+            <span class="far fa-copyright"></span><span> 2020 All rights reserved.</span>
+          </center>
+        </div>
+      </footer>
 
       <script src="js/main.js"></script>
       <script src="js/cards.js"></script>
