--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/faq.css">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
@@ -13,7 +12,7 @@
     <title>DC VS MARVEL</title>
   </head>
 
-  <body class="body-faq">
+  <body>
     <!-- Navbar -->
     <nav class="navbar">
       <a href="#"><img src="./img/DCMARVEL.jpeg" width="200" height="50" alt="Marvel DC"></a>
