--- a/app.html
+++ b/app.html
@@ -34,7 +34,7 @@
       </header>
   
       <!-- CARDS -->
-      <div class="container">
+      <div id="#container1" class="container">
 
         <!-- DC CARDS -->
         <div class="card">
@@ -215,10 +215,10 @@
             <div class="content">
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae aperiam tenetur voluptates, explicabo animi unde, voluptatem deserunt ab delectus, doloremque assumenda? Illo amet doloremque repudiandae officiis in natus aperiam maxime. </p>
               <div class="social">
-                <a href=""><span class="fab fa-facebook-f"></span></a>
-                <a href=""><span class="fab fa-twitter"></span></a>
-                <a href=""><span class="fab fa-instagram"></span></a>
-                <a href=""><span class="fab fa-youtube"></span></a>
+                <a href="#container1"><span class="fab fa-facebook-f"></span></a>
+                <a href="#container1"><span class="fab fa-twitter"></span></a>
+                <a href="#container1"><span class="fab fa-instagram"></span></a>
+                <a href="#container1"><span class="fab fa-youtube"></span></a>
               </div>
             </div>
           </div>
@@ -241,30 +241,11 @@
             </div>
           </div>  
 
-          <div class="right box">
-            <h2>Address</h2>
-            <div class="div content">
-              <form action="#">
-                <div class="email">
-                  <div class="text">Email *</div>
-                  <input type="email" required>
-                </div>
-                <div class="msg">
-                  <div class="text">Message *</div>
-                  <textarea rows="2" cols="25" required></textarea>
-                </div>
-                <div class="btn">
-                  <button type="submit">Send</button>
-                </div>
-                </div>
-              </form>
-            </div>
           </div>
         </div>
         <div class="bottom">
           <center>
-            <span class="credit">Create By <a href="#">Jonathan Jimenez</a> | </span>
-            <span class="far fa-copyright"></span><span> 2020 All rights reserved.</span>
+            <span class="credit">Create By Jonathan Jimenez</span>
           </center>
         </div>
       </footer>
