--- a/app.html
+++ b/app.html
@@ -17,7 +17,6 @@
     <nav class="navbar">
       <a href="#accordion"><img src="./img/DCMARVEL.jpeg" width="200" height="50" alt="Marvel DC"></a>
     </nav>
-    <hr class="separador-nav" />
       <!-- Segunda navbar -->
       <header>
         <input type="checkbox" id="btn-menu" />
@@ -211,20 +210,22 @@
       <footer>
         <div class="main-content">
           <div class="left box">
-            <h2>About us</h2>
+            <h2 class="ft-h2">Follow us</h2>
             <div class="content">
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae aperiam tenetur voluptates, explicabo animi unde, voluptatem deserunt ab delectus, doloremque assumenda? Illo amet doloremque repudiandae officiis in natus aperiam maxime. </p>
+              <p>Don't miss anything</p>
               <div class="social">
                 <a href="#container1"><span class="fab fa-facebook-f"></span></a>
                 <a href="#container1"><span class="fab fa-twitter"></span></a>
                 <a href="#container1"><span class="fab fa-instagram"></span></a>
-                <a href="#container1"><span class="fab fa-youtube"></span></a>
+                <a href="#container1"><span class="fab fa-youtube"></span></a><br>
+                <img src="./img/DClogo.svg" class="lg-ft" width="40" height="40"> 
+                <img src="./img/Mlogo.png" class="lg-ft" width="40" height="40"> 
               </div>
             </div>
           </div>
-
+  
           <div class="center box">
-            <h2>Address</h2>
+            <h2 class="ft-h2">Address</h2>
             <div class="content">
               <div class="place">
                 <span class="fas fa-map-marker-alt"></span>
@@ -240,12 +241,12 @@
               </div>
             </div>
           </div>  
-
+  
           </div>
         </div>
         <div class="bottom">
           <center>
-            <span class="credit">Create By Jonathan Jimenez</span>
+            <span class="credit">Created By Jonathan Jimenez</span>
           </center>
         </div>
       </footer>
