--- a/faq.html
+++ b/faq.html
@@ -17,7 +17,6 @@
     <nav class="navbar">
       <a href="#"><img src="./img/DCMARVEL.jpeg" width="200" height="50" alt="Marvel DC"></a>
     </nav>
-    <hr class="separador-nav" />
       <!--Segunda navbar-->
       <header>
         <input type="checkbox" id="btn-menu" />
@@ -40,22 +39,22 @@
       <li>
         <input type="checkbox" checked>
         <i></i>
-        <h2>Pregunta 1</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit architecto unde, voluptates cum harum fuga veniam suscipit modi esse eum ullam quisquam ipsam. Neque nisi, aut ipsam molestias architecto perspiciatis.</p>
+        <h2 class="acc-h2">Pregunta 1</h2>
+        <p class="respuestas">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit architecto unde, voluptates cum harum fuga veniam suscipit modi esse eum ullam quisquam ipsam. Neque nisi, aut ipsam molestias architecto perspiciatis.</p>
       </li>
 
       <li>
         <input type="checkbox" checked>
         <i></i>
-        <h2>Pregunta 2</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit architecto unde, voluptates cum harum fuga veniam suscipit modi esse eum ullam quisquam ipsam. Neque nisi, aut ipsam molestias architecto perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, beatae amet vel accusantium aliquid quisquam maxime tenetur eaque reiciendis saepe officia hic, neque error est repellendus repudiandae iure nulla harum.</p>
+        <h2 class="acc-h2">Pregunta 2</h2>
+        <p class="respuestas">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit architecto unde, voluptates cum harum fuga veniam suscipit modi esse eum ullam quisquam ipsam. Neque nisi, aut ipsam molestias architecto perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, beatae amet vel accusantium aliquid quisquam maxime tenetur eaque reiciendis saepe officia hic, neque error est repellendus repudiandae iure nulla harum.</p>
       </li>
 
       <li>
         <input type="checkbox" checked>
         <i></i>
-        <h2>Pregunta 3</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit architecto unde, voluptates cum harum fuga veniam suscipit modi esse eum ullam quisquam ipsam. Neque nisi, aut ipsam molestias architecto perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat enim repellat totam unde officiis saepe iusto fugit debitis ullam. Debitis perferendis nam, nostrum unde consectetur sit maiores hic molestias omnis.</p>
+        <h2 class="acc-h2">Pregunta 3</h2>
+        <p class="respuestas">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit architecto unde, voluptates cum harum fuga veniam suscipit modi esse eum ullam quisquam ipsam. Neque nisi, aut ipsam molestias architecto perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat enim repellat totam unde officiis saepe iusto fugit debitis ullam. Debitis perferendis nam, nostrum unde consectetur sit maiores hic molestias omnis.</p>
       </li>
     </ul>
   </div>
@@ -63,10 +62,50 @@
 
 
     <!--Footer-->
-    <footer class="footer-faq">
-      <a href="./faq.html">FAQS</a>
+   
+    <footer>
+      <div class="main-content">
+        <div class="left box">
+          <h2 class="ft-h2">Follow us</h2>
+          <div class="content">
+            <p>Don't miss anything</p>
+            <div class="social">
+              <a href="#container1"><span class="fab fa-facebook-f"></span></a>
+              <a href="#container1"><span class="fab fa-twitter"></span></a>
+              <a href="#container1"><span class="fab fa-instagram"></span></a>
+              <a href="#container1"><span class="fab fa-youtube"></span></a><br>
+              <img src="./img/DClogo.svg" class="lg-ft" width="40" height="40"> 
+              <img src="./img/Mlogo.png" class="lg-ft" width="40" height="40"> 
+            </div>
+          </div>
+        </div>
+
+        <div class="center box">
+          <h2 class="ft-h2">Address</h2>
+          <div class="content">
+            <div class="place">
+              <span class="fas fa-map-marker-alt"></span>
+              <span class="text">Asgard</span>
+            </div>
+            <div class="phone">
+              <span class="fas fa-phone"></span>
+              <span class="text">+6528-3738-53689</span>
+            </div>
+            <div class="email">
+              <span class="fas fa-envelope"></span>
+              <span class="text">odin@asgard.com</span>
+            </div>
+          </div>
+        </div>  
+
+        </div>
+      </div>
+      <div class="bottom">
+        <center>
+          <span class="credit">Create By Jonathan Jimenez</span>
+        </center>
+      </div>
     </footer>
-    
     <script src="./js/main.js"></script>
   </body>
 </html>
