--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <nav class="navbar">
       <a href="#accordion"><img src="./img/DCMARVEL.jpeg" width="200" height="50" alt="Marvel DC"></a>
     </nav>
-    <hr class="separador-nav" />
       <!--Segunda navbar-->
     <header>
       <input type="checkbox" id="btn-menu" />
@@ -90,50 +89,52 @@
             </div>
             
 
-        <!--Footer-->
-
-      <footer class="footer-home">
-
-        <div class="footer-container">
-
-          <div class="footer-lg">
-            <a href="#accordion"><img src="./img/DClogo.svg" width="50" height="60" alt="DC Logo"></a>
-          </div>
-
-          <div class="container-sm">
-            <p>Follow DC</p>
-            <div class="sm-logos">
-              <p class="p-lg"><i class="fab fa-twitter-square"></i></p>
-              <p class="p-lg"><i class="fab fa-facebook"></i></p>
-              <p class="p-lg"><i class="fab fa-instagram"></i></p>
-              <p class="p-lg"><i class="fab fa-pinterest"></i></p>
-              <p class="p-lg"><i class="fab fa-snapchat"></i></p>
-              <p class="p-lg"><i class="fab fa-youtube"></i></p>
+        
+    <!--Footer-->
+   
+    <footer>
+      <div class="main-content">
+        <div class="left box">
+          <h2 class="ft-h2">Follow us</h2>
+          <div class="content">
+            <p>Don't miss anything</p>
+            <div class="social">
+              <a href="#container1"><span class="fab fa-facebook-f"></span></a>
+              <a href="#container1"><span class="fab fa-twitter"></span></a>
+              <a href="#container1"><span class="fab fa-instagram"></span></a>
+              <a href="#container1"><span class="fab fa-youtube"></span></a><br>
+              <img src="./img/DClogo.svg" class="lg-ft" width="40" height="40"> 
+              <img src="./img/Mlogo.png" class="lg-ft" width="40" height="40"> 
             </div>
           </div>
         </div>
 
-        <div class="footer-container">
-
-          <div class="container-sm">
-            <p>Follow Marvel</p>
-            <div class="sm-logos">
-              <p class="p-lg"><i class="fab fa-twitter-square"></i></p>
-              <p class="p-lg"><i class="fab fa-facebook"></i></p>
-              <p class="p-lg"><i class="fab fa-instagram"></i></p>
-              <p class="p-lg"><i class="fab fa-pinterest"></i></p>
-              <p class="p-lg"><i class="fab fa-snapchat"></i></p>
-              <p class="p-lg"><i class="fab fa-youtube"></i></p>
+        <div class="center box">
+          <h2 class="ft-h2">Address</h2>
+          <div class="content">
+            <div class="place">
+              <span class="fas fa-map-marker-alt"></span>
+              <span class="text">Asgard</span>
+            </div>
+            <div class="phone">
+              <span class="fas fa-phone"></span>
+              <span class="text">+6528-3738-53689</span>
+            </div>
+            <div class="email">
+              <span class="fas fa-envelope"></span>
+              <span class="text">odin@asgard.com</span>
             </div>
           </div>
-
-          <div class="footer-lg">
-            <a href="#accordion"><img src="./img/Mlogo.png" width="50" height="50" alt="Marvel DC"></a>
-          </div>
+        </div>  
 
         </div>
-
-      </footer>
+      </div>
+      <div class="bottom">
+        <center>
+          <span class="credit">Create By Jonathan Jimenez</span>
+        </center>
+      </div>
+    </footer>
 
         <script src="js/main.js"></script>
         <script src="js/buttons.js"></script>
